# backend-recruit-task-3

./: .gitignore  .pre-commit-config.yaml  README.md  modesl.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest.yaml
app/: debug.py  deps.py  main.py  models.py
app/api/: _auth.py  admin.py  auth.py  models.py  student.py  teacher.py
app/api/admin/: course.py  department.py  major.py  user.py
app/core/: config.py  logger.py  redis.py  sql.py
app/db/: models.py  sql.py
app/models/: course.py  department.py  major.py  selection.py  user.py
app/repositories/: __init__.py  course.py  department.py  major.py  selection.py  user.py  user_repository.py
app/schemas/: admin.py  auth.py  course.py
app/services/: auth_service.py  token_blacklist.py
tests/: conftest.py  database.py  test_admin.py  test_auth.py  test_student.py  test_teacher.py
